Enhance the capabilities of expressions that can be used in custom files
You can now use more complex expression by refering request, response
or output variables from previous tests